change the layout to list

--- a/app/src/main/res/layout/activity_focus__playist.xml
+++ b/app/src/main/res/layout/activity_focus__playist.xml
@@ -8,19 +8,23 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="25sp"
+        android:textColor="#000000"
+        android:padding="10dp"
         tools:text="Title">
     </TextView>
 
     <TextView
         android:id="@+id/artist"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="25sp"
+        android:textColor="#000000"
+        android:padding="10dp"
         tools:text="Artist">
     </TextView>
 
