--- a/app/src/main/res/layout/activity_focus__playist.xml
+++ b/app/src/main/res/layout/activity_focus__playist.xml
@@ -1,31 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-
-    <TextView
-        android:id="@+id/title"
+    android:layout_height="match_parent">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="25sp"
-        android:textColor="#000000"
-        android:padding="10dp"
-        tools:text="Title">
-    </TextView>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/artist"
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="77dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/play"
+            android:src="@drawable/play_button" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            android:layout_margin="10dp"
+            tools:text="Title">
+        </TextView>
+
+        <TextView
+            android:id="@+id/artist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            android:layout_margin="10dp"
+            tools:text="Artist">
+        </TextView>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/back"
+        style="@android:style/Widget.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="25sp"
-        android:textColor="#000000"
-        android:padding="10dp"
-        tools:text="Artist">
-    </TextView>
-
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        android:text="@string/click_here_to_go_back" />
+</RelativeLayout>
