--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!--Text Style for Main Activity-->
+    <style name="TextStyle">
+        <!-- Customize your theme here. -->
+        <item name="android:textSize">18sp</item>
+        <item name="android:paddingLeft">120dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_gravity">start</item>
+    </style>
+
 </resources>
