--- a/app/src/main/res/layout/activity_focus__playist.xml
+++ b/app/src/main/res/layout/activity_focus__playist.xml
@@ -1,54 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="77dp"
+        android:layout_height="44dp"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:contentDescription="@string/play"
+        android:src="@drawable/play_button" />
+
+    <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        tools:text="Title"
+        style="@style/FocusTextStyle"/>
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="77dp"
-            android:layout_height="44dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:contentDescription="@string/play"
-            android:src="@drawable/play_button" />
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="20sp"
-            android:textColor="#000000"
-            android:layout_margin="10dp"
-            tools:text="Title">
-        </TextView>
-
-        <TextView
-            android:id="@+id/artist"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="20sp"
-            android:textColor="#000000"
-            android:layout_margin="10dp"
-            tools:text="Artist">
-        </TextView>
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/back"
-        style="@android:style/Widget.Button"
+    <TextView
+        android:id="@+id/artist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp"
-        android:text="@string/click_here_to_go_back" />
-</RelativeLayout>
+        tools:text="Artist"
+        style="@style/FocusTextStyle"/>
+
+</LinearLayout>
