--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,12 +9,21 @@
     </style>
 
     <!--Text Style for Main Activity-->
-    <style name="TextStyle">
+    <style name="MainTextStyle">
         <!-- Customize your theme here. -->
         <item name="android:textSize">18sp</item>
         <item name="android:paddingLeft">120dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_gravity">start</item>
     </style>
+
+    <style name="FocusTextStyle">
+        <!-- Customize your theme here. -->
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_margin">10dp</item>
+    </style>
+
 
 </resources>
