--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:textColor">#000000</item>
         <item name="android:layout_margin">10dp</item>
+        <item name="android:layout_gravity">center</item>
     </style>
 
 
