--- a/app/src/main/res/layout/activity_focus__playist.xml
+++ b/app/src/main/res/layout/activity_focus__playist.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:id="@+id/play_list">
+    android:id="@+id/playlist_view">
 
     <ImageView
         android:id="@+id/image"
